--- a/GravityTagCloudViewDemo/GravityTagCloudViewDemo/Base.lproj/Main.storyboard
+++ b/GravityTagCloudViewDemo/GravityTagCloudViewDemo/Base.lproj/Main.storyboard
@@ -4,9 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,16 +21,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xSy-4w-3Gb" customClass="GravityTagCloudView" customModule="GravityTagCloudView">
-                                <rect key="frame" x="16" y="20" width="343" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="xSy-4w-3Gb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="DNm-mn-RId"/>
-                            <constraint firstItem="xSy-4w-3Gb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="NXm-4c-wtP"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xSy-4w-3Gb" secondAttribute="bottom" id="eTD-D7-0l9"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="xSy-4w-3Gb" secondAttribute="trailing" id="iUY-pW-xBI"/>
+                            <constraint firstItem="xSy-4w-3Gb" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="14k-S3-Wcj"/>
+                            <constraint firstAttribute="trailing" secondItem="xSy-4w-3Gb" secondAttribute="trailing" id="gTz-lX-hKr"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xSy-4w-3Gb" secondAttribute="bottom" id="tbO-Y2-eCr"/>
+                            <constraint firstItem="xSy-4w-3Gb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wdV-TS-3Ke"/>
                         </constraints>
                     </view>
                     <connections>
@@ -41,6 +39,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="141.59999999999999" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
